Just changing for demonstration purposes

--- a/justified_nav.html
+++ b/justified_nav.html
@@ -34,7 +34,7 @@
 		<article>
 			<div class="row">
 				<div class="col-lg-4">
-					<h3>Heading 3</h3>
+					<h3>3rd Level Heading</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur eveniet nihil architecto est nobis! Facilis quos voluptate voluptatibus, illo porro quo eligendi quam, animi consequatur itaque tempore doloribus, dolores magnam.</p>
 					<p class="btn">view details</p>
 				</div>
